--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,6 @@
 <h1> Photos </h1>
 <%# collections: @items come from the items_controller %>
 
-<%= render partial: "item", collection: @items %>
+<div class ="items-grid">
+    <%= render partial: "item", collection: @items %>
+</div>
