--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,11 +25,18 @@
   <% end %>
 
   <header>
-    <h1> Source </h1>
+    <h1>
+        <%= link_to root_path do %>
+          Source
+        <% end %>
+      </h1>
+
     <nav>
       <% if is_logged_in? %>
         <strong> <%= @current_user.username  %></strong>
+        <%= link_to "All photos", items_path %>
         <%= link_to "Log out", session_path, data: {"turbo-method": :delete} %>
+         
      <% else %>
         <%= link_to "Sign up", new_user_path %>
         <%= link_to "Log in", new_session_path %>
