added categories to items

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,11 @@
 <h1> <%= @item.title %> <h1>
 
+<% @item.categories.each do |cat| %>
+   <span><%= link_to cat.title, category_path(cat) %></span>
+<% end %>
+
+<%= simple_format @item.description %>
+
 <%= image_tag @item.image,style: "width: 500px; height: 500px;" %>
 
 <p>
