--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
       <% if is_logged_in? %>
         <strong> <%= @current_user.username  %></strong>
         <%= link_to "All photos", items_path %>
+        <%= link_to "Categories", categories_path %>
         <%= link_to "Log out", session_path, data: {"turbo-method": :delete} %>
          
      <% else %>
