delete user account

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1> Source </h1>
+<h1> Welcome to Source - An exclusive image stock photo  </h1>
 
 <p>
     <%= link_to "Sign up", new_user_path, class: "button"%>
