--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
         <strong> <%= @current_user.username  %></strong>
         <%= link_to "All photos", items_path %>
         <%= link_to "Categories", categories_path %>
+        <%= link_to "Account", edit_account_path %>
         <%= link_to "Log out", session_path, data: {"turbo-method": :delete} %>
          
      <% else %>
